# Rustlings

./: README.md
Axum_tutorials/data/: .env  Cargo.toml
Axum_tutorials/data/src/: lib.rs  main.rs
Axum_tutorials/data/src/controllers/: account_controller.rs  block_controller.rs  error_controller.rs  login_controller.rs  mod.rs  token_controller.rs
Axum_tutorials/data/src/middlewares/: AuthMiddleware.rs  ErrorUrlMiddleware.rs  mod.rs
Axum_tutorials/data/src/models/: blocks.rs  mod.rs  prelude.rs  token_events.rs  tokens.rs  tx_history.rs  txs.rs  users.rs  utxos.rs
Axum_tutorials/hello_world/: Cargo.toml
Axum_tutorials/hello_world/src/: lib.rs  main.rs
Axum_tutorials/hello_world/src/routes/: auth_middleware.rs  custom_statuscodes.rs  hello_world.rs  middleware_custom_handler.rs  middlewares.rs  mod.rs  return_json.rs  returns_201.rs  user_controller.rs  user_headers.rs  user_path_variables.rs  user_query_params.rs  validate_body.rs
Concepts/: 100_lifetime.rs  101_Named_Lifetimes.rs  102_Lifetimes_3_rules.rs  103_Anonymous_lifetimes.rs  104_Interior_mutability.rs  105_Interior_mutability_cell.rs  106_Interior_mutability_refcell.rs  107_Cell_RefCell.rs  108_Mutex.rs  109_Mutex_In_struct.rs  10_Reference.rs  110_RWLock.rs  111_Clone_onWrite_COW.rs  112_Cow_Return_Slice_Vec.rs  113_Type_Aliases.rs  114_todo_macro.rs  115_116_117_Reference_Counter_rc.rs  115_116_Reference_Counter_rc.rs  118_RefCell_in_Rc.rs  119_Concurrency_Threads_1.rs  11_AdvancedPrint.rs  120_Concurrency_Threads_2.rs  121_Concurrency_Threads_3.rs  122_Concurrency_Atomic_Ref_Count_1.rs  123_Concurrency_Atomic_Ref_Count_2.rs  124_CLosures_Diff_Type_Traits.rs  125_Closures_in_Functions.rs  126_Closures_in_Functions_2.rs  127_Returning_Closures_from_fns.rs  128_Returning_Closures_from_fns_2.rs  129_Box.rs  12_AdvancedPriting.rs  130_Box_Indirection_use.rs  131_Box_Dynamic_dispatch.rs  132_Box_Dynamic_dispatch_vs_impl_trait.rs  133_Channel_1.rs  134_Channel_with_threads.rs  135_Channels_Part3.rs  136_Attributes_1.rs  137_Attributes_Types_2.rs  (+126 more)
Concepts/86_Iterators/: 86_87_Closures_and_then.rs  88_Iterators_Closures_any.rs
Concepts/External_Crates_155_156/: Cargo.toml
Concepts/External_crates_rayon_serde_157/: Cargo.toml
Concepts_186/: Cargo.toml
Concepts_186/src/: 188_lazy_static.rs  189_oncecell.rs  190_static_mutexes.rs  191_Implementating_Enums_as_traits_1.rs  191_Implementating_Enums_as_traits_2.rs  192_Let_Else.rs  193_Iterators_From_Fn_Vec_Array.rs  194_Panic_hooks.rs  195_Backtraces.rs  main.rs  serde.rs
Useful_code/: Cargo.toml
Useful_code/src/: log4rs.yml  main.rs
Video_10_trait/: Cargo.toml
Video_10_trait/src/: main.rs
Video_1_Guessing_game/: Cargo.toml
Video_1_Guessing_game/src/: main.rs
Video_2_Common_program_Concepts/: Cargo.toml
Video_2_Common_program_Concepts/src/: main.rs
Video_3_Ownership/: Cargo.toml
Video_4_Structs/: Cargo.toml
Video_5_Enums_Pattern_Matching/: Cargo.toml
Video_6_Module_System/: Cargo.toml
Video_7_Collections/: Cargo.toml
Video_8_ErrorHandling/: Cargo.toml
Video_9_Generic_Types/: Cargo.toml
(+16 files in other folders)
