[package]
name = "Concepts_186"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
lazy_static = "1.4.0"
once_cell = "1.18.0"
reqwest = "0.11.18"
serde = {version ="1.0.183", features = ["derive"] } 
serde_json = "1.0.105"
