[package]
name = "Useful_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.6", features=["derive", "cargo"]}
env_logger = "0.10.0"
log = "0.4.20"
log4rs = "1.2.0"
rand = "0.8.5"
