[package]
name = "Useful_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = {version = "4.4.6", features=["derive", "cargo"]}
crossbeam = "0.8.2"
data-encoding = "2.4.0"
env_logger = "0.10.0"
error-chain = "0.12.4"
flate2 = "1.0.27"
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.2.0"
num_cpus = "1.16.0"
rand = "0.8.5"
rayon = "1.8.0"
ring = "0.17.5"
tar = "0.4.40"
threadpool = "1.8.1"
walkdir = "2.4.0"
