[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros"] }
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { "version" = "1.32.0", "features" = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
axum-extra = { version = "0.7.7", features = ["typed-routing"] }
